--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.proyecto</groupId>
+    <groupId>com.miempresa</groupId>
     <artifactId>EntregaFinal</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -12,17 +12,9 @@
         <maven.compiler.target>21</maven.compiler.target>
     </properties>
 
-    <dependencies>
-        <!-- Dependencia para JUnit, útil para pruebas unitarias -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-
     <build>
+        <sourceDirectory>src/main.java</sourceDirectory>
+        <testSourceDirectory>src/test.java</testSourceDirectory>
         <plugins>
             <!-- Plugin para compilar con la versión de Java especificada -->
             <plugin>
@@ -64,4 +56,14 @@
             </plugin>
         </plugins>
     </build>
+
+    <dependencies>
+        <!-- Dependencia para JUnit 5 para pruebas -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.7.0</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
